Update api server and expand web app functionality
